--- a/currency.html
+++ b/currency.html
@@ -5,26 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="c.css">
+    <link rel="stylesheet" href="currency.css">
     <title>Currency Convertor App</title>
 </head>
 
 <body>
-<div class="container">
-    <h1>Currency Convertor</h1>
-    <div class="box">
-        <div class="left-box">
-            <select name="currency" class="currency"></select>
-            <input type="number" name="" id="input">
+    <div class="container">
+        <h1>Currency Convertor</h1>
+        <div class="box">
+            <div class="left-box">
+                <select name="currency" class="currency"></select>
+                <input type="number" name="" id="input">
+            </div>
+            <div class="right-box">
+                <select name="currency" class="currency"></select>
+                <input type="number" name="" id="result" disabled>
+            </div>
         </div>
-        <div class="right-box">
-            <select name="currency" class="currency"></select>
-            <input type="number" name="" id="result" disabled>
-        </div>
-    </div>
-</div>
+        <button class="btn" id="btn">Convert</button>
+    </div> 
+</div> 
 
-<button class="btn" id="btn">Convert</button>
+
+
 
     <script src="currency.js"></script>
 </body>
